# internal/api/api.swagger.yaml
@@ -53,7 +53,94 @@ paths:
           schema:
             $ref: '#/definitions/Error'
 
+  /auth/login:
+    post:
+      summary: Login User
+      operationId: LoginUser
+      tags: 
+        - Auth
+      parameters:
+        - name: LoginUser
+          description: Login User Body
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/LoginUser'
+      responses:
+        200:
+          description: Login Response
+          schema:
+            $ref: '#/definitions/LoginResponse'
+        400:
+          description: Bad request
+          schema:
+            $ref: '#/definitions/Error'
+        403:
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/Error' 
+        422:
+          description: Unprocessable Entity
+          schema:
+            $ref: "#/definitions/Error"        
+        500:
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/Error'
+
 definitions:
+  CallBackResponse:
+    type: object
+    required:
+      - balance
+    properties:
+      error_code:
+        type: string
+      error_description:
+        type: string     
+      transaction_id:
+        type: string           
+      balance:
+        type: number   
+      rollback_transactions:
+        type: array
+        items:
+          type: string
+
+  UrlResponse:
+      type: object
+      required:
+        - url
+      properties:
+        url:
+          type: string
+
+  ResponseMsg:
+    type: object
+    required:
+      - message
+    properties:
+      message:
+        type: string
+
+  Error:
+    type: object
+    required:
+      - message
+    properties:
+      message:
+        type: string
+
+  Principal:
+    type: object
+    properties:
+      id:
+        type: string
+        readOnly: true
+      role:
+        type: integer
+        readOnly: true
+
   RegisterUser:
     type: object
     required:
@@ -70,15 +157,20 @@ definitions:
         type: string
       again_password:
         type: string
-  Error:
-   type: object
-   properties:
-     message:
-      type: string
+
+  LoginUser:
+    type: object
+    required:
+      - email
+      - password
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+
   LoginResponse:
     type: object
     properties:
        access_token:
-        type: string
-       refresh_token:
         type: string
