# internal/api/definition/call_back_response.go
@@ -1,0 +1,83 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package definition
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// CallBackResponse call back response
+//
+// swagger:model CallBackResponse
+type CallBackResponse struct {
+
+	// balance
+	// Required: true
+	Balance *float64 `json:"balance"`
+
+	// error code
+	ErrorCode string `json:"error_code,omitempty"`
+
+	// error description
+	ErrorDescription string `json:"error_description,omitempty"`
+
+	// rollback transactions
+	RollbackTransactions []string `json:"rollback_transactions"`
+
+	// transaction id
+	TransactionID string `json:"transaction_id,omitempty"`
+}
+
+// Validate validates this call back response
+func (m *CallBackResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateBalance(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CallBackResponse) validateBalance(formats strfmt.Registry) error {
+
+	if err := validate.Required("balance", "body", m.Balance); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this call back response based on context it is used
+func (m *CallBackResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CallBackResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CallBackResponse) UnmarshalBinary(b []byte) error {
+	var res CallBackResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
