# internal/api/definition/url_response.go
@@ -14,21 +14,21 @@ import (
 	"github.com/go-openapi/validate"
 )
 
-// Error error
+// URLResponse Url response
 //
-// swagger:model Error
-type Error struct {
+// swagger:model UrlResponse
+type URLResponse struct {
 
-	// message
+	// url
 	// Required: true
-	Message *string `json:"message"`
+	URL *string `json:"url"`
 }
 
-// Validate validates this error
-func (m *Error) Validate(formats strfmt.Registry) error {
+// Validate validates this Url response
+func (m *URLResponse) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	if err := m.validateMessage(formats); err != nil {
+	if err := m.validateURL(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -38,22 +38,22 @@ func (m *Error) Validate(formats strfmt.Registry) error {
 	return nil
 }
 
-func (m *Error) validateMessage(formats strfmt.Registry) error {
+func (m *URLResponse) validateURL(formats strfmt.Registry) error {
 
-	if err := validate.Required("message", "body", m.Message); err != nil {
+	if err := validate.Required("url", "body", m.URL); err != nil {
 		return err
 	}
 
 	return nil
 }
 
-// ContextValidate validates this error based on context it is used
-func (m *Error) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+// ContextValidate validates this Url response based on context it is used
+func (m *URLResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
 	return nil
 }
 
 // MarshalBinary interface implementation
-func (m *Error) MarshalBinary() ([]byte, error) {
+func (m *URLResponse) MarshalBinary() ([]byte, error) {
 	if m == nil {
 		return nil, nil
 	}
@@ -61,8 +61,8 @@ func (m *Error) MarshalBinary() ([]byte, error) {
 }
 
 // UnmarshalBinary interface implementation
-func (m *Error) UnmarshalBinary(b []byte) error {
-	var res Error
+func (m *URLResponse) UnmarshalBinary(b []byte) error {
+	var res URLResponse
 	if err := swag.ReadJSON(b, &res); err != nil {
 		return err
 	}
