# internal/api/server/restapi/handler/auth.go
@@ -2,11 +2,15 @@ package handler
 
 import (
 	_ "fmt"
+	"strings"
 
 	"github.com/Maksim646/space_vpx_satellite/pkg/hash"
+	"github.com/Maksim646/space_vpx_satellite/pkg/jsonwebtoken"
+	"github.com/Maksim646/space_vpx_satellite/pkg/useful"
 
 	"github.com/Maksim646/space_vpx_satellite/internal/api/definition"
 	"github.com/Maksim646/space_vpx_satellite/internal/api/server/restapi/api"
+	"github.com/Maksim646/space_vpx_satellite/internal/model"
 	"github.com/go-openapi/runtime/middleware"
 	"go.uber.org/zap"
 )
@@ -18,7 +22,7 @@ func (h *Handler) RegisterUserHandler(req api.RegisterUserParams) middleware.Res
 	_, err := h.userUsecase.GetUserByEmail(ctx, *req.RegisterUser.Email)
 	if err == nil {
 		return api.NewRegisterUserBadRequest().WithPayload(&definition.Error{
-			Message: "user already exists",
+			Message: useful.StrPtr("user already exists"),
 		})
 	}
 
@@ -34,10 +38,51 @@ func (h *Handler) RegisterUserHandler(req api.RegisterUserParams) middleware.Res
 		return api.NewRegisterUserInternalServerError()
 	}
 
-	_, err = h.userUsecase.GetUserByID(ctx, userID)
+	user, err := h.userUsecase.GetUserByID(ctx, userID)
 	if err != nil {
 		return api.NewRegisterUserInternalServerError()
 	}
 
-	return api.NewRegisterUserOK()
+	token, err := jsonwebtoken.GenerateToken(user.ID, 0, h.jwtSigninKey)
+	if err != nil {
+		return api.NewRegisterUserInternalServerError()
+	}
+
+	return api.NewRegisterUserOK().WithPayload(&definition.LoginResponse{
+		AccessToken: token,
+	})
+}
+
+func (h *Handler) LoginUserHandler(req api.LoginUserParams) middleware.Responder {
+	zap.L().Info("login request")
+	ctx := req.HTTPRequest.Context()
+
+	user, err := h.userUsecase.GetUserByEmail(ctx, *req.LoginUser.Email)
+	if err != nil {
+		return api.NewLoginUserBadRequest().WithPayload(&definition.Error{
+			Message: &model.UserNotFound,
+		})
+	}
+
+	passwordHash, err := hash.GenerateHash(*req.LoginUser.Password, h.HashSalt)
+	if err != nil {
+		return api.NewRegisterUserInternalServerError()
+	}
+
+	if strings.Compare(user.PasswordHash, passwordHash) != 0 {
+
+		return api.NewLoginUserBadRequest().WithPayload(&definition.Error{
+			Message: useful.StrPtr("invalid login or password"),
+		})
+	}
+
+	token, err := jsonwebtoken.GenerateToken(user.ID, 0, h.jwtSigninKey)
+	if err != nil {
+		return api.NewRegisterUserInternalServerError()
+	}
+
+	return api.NewLoginUserOK().WithPayload(&definition.LoginResponse{
+		AccessToken: token,
+	})
+
 }
